[tool.poetry]
name = "repl_nix_cybersecstories"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2022.2.1"
aiohttp = "^3.8.3"
APScheduler = "^3.9.1"
discord = "^2.0.0"
feedparser = "^6.0.10"
Flask = "^2.2.2"
requests = "^2.28.1"
OTXv2 = "^1.5.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
